Bug fixes
Fixed issue causing horizontal scrolling on mobile nav menu

--- a/_includes/scss/navigation.scss
+++ b/_includes/scss/navigation.scss
@@ -53,6 +53,7 @@ nav.main-nav {
       position: fixed;
       display: block;
       overflow-y: auto;
+      overflow-x: hidden;
       width: 200px;
       height: 100vh;
       top: 0;
